Added FPS movement

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   </body>
 
   <script src="three.min.js"></script>
+  <script src="thing.js"></script>
+  <script src="player.js"></script>
   <script src="gamestate.js"></script>
   <script src="main.js"></script>
 </html>
