added saving/loading level localstorage data and temp textures

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
   <script src="thing.js"></script>
   <script src="player.js"></script>
   <script src="gamestate.js"></script>
+  <script src="utils.js"></script>
   <script src="main.js"></script>
 </html>
