--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
   <script src="player.js"></script>
   <script src="gamestate.js"></script>
   <script src="utils.js"></script>
+  <script src="levels.js"></script>
   <script src="main.js"></script>
 </html>
