Moved hook to its own class and file

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="three.min.js"></script>
   <script src="thing.js"></script>
   <script src="player.js"></script>
+  <script src="hook.js"></script>
   <script src="gamestate.js"></script>
   <script src="utils.js"></script>
   <script src="levels.js"></script>
