Separated player from character class

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <script src="three.min.js"></script>
   <script src="thing.js"></script>
+  <script src="character.js"></script>
   <script src="player.js"></script>
   <script src="hook.js"></script>
   <script src="gamestate.js"></script>
