--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="thing.js"></script>
   <script src="character.js"></script>
   <script src="player.js"></script>
+  <script src="enemy.js"></script>
   <script src="hook.js"></script>
   <script src="gamestate.js"></script>
   <script src="utils.js"></script>
