Added collisions between things

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="player.js"></script>
   <script src="enemy.js"></script>
   <script src="hook.js"></script>
+  <script src="collisionpruner.js"></script>
   <script src="gamestate.js"></script>
   <script src="utils.js"></script>
   <script src="levels.js"></script>
