Switched to modules

--- a/index.html
+++ b/index.html
@@ -20,15 +20,5 @@
     </canvas>
   </body>
 
-  <script src="three.min.js"></script>
-  <script src="thing.js"></script>
-  <script src="character.js"></script>
-  <script src="player.js"></script>
-  <script src="enemy.js"></script>
-  <script src="hook.js"></script>
-  <script src="collisionpruner.js"></script>
-  <script src="gamestate.js"></script>
-  <script src="utils.js"></script>
-  <script src="levels.js"></script>
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </html>
